# tflite_optimization

./: README.md  pyproject.toml  requirements.txt
model_optimization/: infer.py  quantize_model.py
